--- a/abrp/kia-e-niro/pro/values.yaml
+++ b/abrp/kia-e-niro/pro/values.yaml
@@ -2,7 +2,7 @@ image:
   pullPolicy: IfNotPresent
 
 imagePullSecrets:
-  - name: regcred
+  - name: docker-ralphsmeets-creds
 
 mijnKia:
   loginEmail: <path:/k8s-provisioning/data/pro/applications/mijn-kia#mijnKiaLoginEmail>
