changed to my helm chart

--- a/abrp/kia-e-niro/pro/helm-application.yaml
+++ b/abrp/kia-e-niro/pro/helm-application.yaml
@@ -1,4 +1,4 @@
 chart:
-  repo_url: https://ralphsmeets.github.io/helm-charts
+  repo_url: https://ralphsmeets.github.io/my-helm-charts
   name: mijn-kia
   version: 1.0.0
